Updated building prerequisites

--- a/debian/http/preseed.cfg
+++ b/debian/http/preseed.cfg
@@ -144,7 +144,7 @@ tasksel tasksel/first multiselect standard
 #tasksel tasksel/desktop multiselect kde, xfce
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server virtualbox-guest-utils sudo git build-essential devscripts ccache cmake qtbase5-dev libqt5webkit5-dev qtdeclarative5-dev qtscript5-dev qtmultimedia5-dev
+d-i pkgsel/include string openssh-server virtualbox-guest-utils sudo git build-essential devscripts ccache cmake qtbase5-dev libqt5webkit5-dev qtdeclarative5-dev qtscript5-dev qtmultimedia5-dev libqt5xmlpatterns5-dev libhunspell-dev
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
